apps/policy/resources/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    policy.engiqueers/domain: "internal"
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    policy.engiqueers/domain: "internal"
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    policy.engiqueers/domain: "internal"
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: openebs
  labels:
    policy.engiqueers/domain: "internal"
    pod-security.kubernetes.io/enforce: privileged
---
kind: Namespace
apiVersion: v1
metadata:
  name: cnpg-system
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: authentik
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: headlamp
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: test-mc
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: modded-mc
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: harbor
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: website
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: cdi
  labels:
    policy.engiqueers/domain: "internal"
    cdi.kubevirt.io: ''

---
kind: Namespace
apiVersion: v1
metadata:
  name: kubevirt
  labels:
    policy.engiqueers/domain: "internal"
    pod-security.kubernetes.io/enforce: privileged
    kubevirt.io: ''
---
kind: Namespace
apiVersion: v1
metadata:
  name: user-juan
  labels:
    policy.engiqueers/domain: "user"

---
kind: Namespace
apiVersion: v1
metadata:
  name: prometheus-stack
  labels:
    policy.engiqueers/domain: "internal"
    pod-security.kubernetes.io/enforce: privileged
---
kind: Namespace
apiVersion: v1
metadata:
  name: redbot
  labels:
    policy.engiqueers/domain: "internal"
    pod-security.kubernetes.io/enforce: restricted
---
kind: Namespace
apiVersion: v1
metadata:
  name: xonotic
  labels:
    policy.engiqueers/domain: "internal"
    pod-security.kubernetes.io/enforce: restricted
---
kind: Namespace
apiVersion: v1
metadata:
  name: rustfs
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: loki
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: jupyterhub
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: jupyterhub-user
  labels:
    policy.engiqueers/domain: "user"
    pod-security.kubernetes.io/enforce: restricted
---
kind: Namespace
apiVersion: v1
metadata:
  name: nextcloud
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: stakater
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: argocd-diff
  labels:
    policy.engiqueers/domain: "internal"
---
kind: Namespace
apiVersion: v1
metadata:
  name: u-cure-mc
  labels:
    policy.engiqueers/domain: "user"
    pod-security.kubernetes.io/enforce: restricted
