apps/policy/resources/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: ingress
spec:
  parentRefs:
    - name: engiqueers-insecure
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 302
      matches:
        - path:
            type: PathPrefix
            value: /
